fixed nav flicker, changed og image

--- a/src/styles/components/hero.less
+++ b/src/styles/components/hero.less
@@ -2,7 +2,6 @@
   height: 100vh;
   position: relative;
   font-family: @roboto;
-  transition: @theme-transition;
 
   .buildGradient(100vh, 100vh);
 
@@ -87,7 +86,7 @@
       position: absolute;
       top: 0;
       z-index: 2;
-      transition: all 1s ease-in-out;
+      transition: @theme-transition;
       color: @sunrise-header-shadow;
       transform: translate(-8px, 8px);
       .dark-mode & {
